--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.0.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "sequelize": "^6.35.2",
     "sequelize-cli": "^6.6.2",
